Added alertBarText to the project

--- a/InfoTools/InfoTools.csproj
+++ b/InfoTools/InfoTools.csproj
@@ -13,6 +13,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Update="resources\alertBarText.txt">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<None Update="resources\favicon.ico">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
