--- a/InfoTools/InfoTools.csproj
+++ b/InfoTools/InfoTools.csproj
@@ -16,6 +16,9 @@
 		<None Update="resources\alertBarText.txt">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="resources\config.json">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<None Update="resources\favicon.ico">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
